kfreebsd-10 (10.0~svn232747-2) UNRELEASED; urgency=low

  * Set -DWITHOUT_KERNEL_SYMBOLS MK knob to make lintian happy.
  * Replace 950_no_stack_protector.diff with -DWITHOUT_SSP build knob.

 -- Robert Millan <rmh@debian.org>  Sat, 17 Mar 2012 01:16:08 +0100

kfreebsd-10 (10.0~svn232747-1) experimental; urgency=low

  * New upstream snapshot.
    - Removes most USB drivers from main kernel image (reduces our
      sys/*/conf/GENERIC delta).

  [ Robert Millan ]
  * Factorize common options into a single file.

 -- Robert Millan <rmh@debian.org>  Fri, 09 Mar 2012 22:19:14 +0100

kfreebsd-10 (10.0~svn232158-1) experimental; urgency=low

  * New upstream snapshot.
    - Disable adw via in WITHOUT_SOURCELESS_UCODE rather than in GENERIC.

  [ Robert Millan ]
  * Build by GCC 4.6.
  * Lower libc0.1 requirement to 2.11.3-1.
  * Enable pflog.  (Closes: #658677)

 -- Robert Millan <rmh@debian.org>  Sat, 25 Feb 2012 16:55:15 +0100

kfreebsd-10 (10.0~svn230972-1) experimental; urgency=low

  * New upstream snapshot.
    - 903_disable_non-free_drivers.diff: Remove (obsoleted by
      MK_SOURCELESS build option).
    - 999_firmware.diff: Likewise.

 -- Robert Millan <rmh@debian.org>  Sat, 04 Feb 2012 12:20:22 +0100

kfreebsd-10 (10.0~svn230109-1) experimental; urgency=low

  * New upstream snapshot.

  [ Robert Millan ]
  * Remove 951_disable_mk_magic.diff (except for MK_CTF bits), build-depend
    on freebsd-buildutils >= 9 instead.
  * 952_nodebug.diff: Disable full debugger support to minimize the
    impact of heisenbugs (see patch header for details).

 -- Robert Millan <rmh@debian.org>  Sun, 15 Jan 2012 14:35:58 +0100

kfreebsd-10 (10.0~svn228940-1) experimental; urgency=low

  * New upstream snapshot.

  [ Robert Millan ]
  * Enable SMP in -686 and turn -686-smp into a transitional package.
  * Disable udebs for xen flavour on i386 (unbuildable).

 -- Robert Millan <rmh@debian.org>  Thu, 29 Dec 2011 00:53:20 +0100
