@@ -7,9 +7,9 @@ Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/kfreebsd-@major@/
 Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/kfreebsd-@major@/
 Build-Depends: debhelper (>= 5.0.0), bzip2, sharutils, flex-old | flex,
  freebsd-buildutils (>= 9.0-9~),
- gcc-@gcc_version@, libdb-dev,
+ @kernel_cc@, libdb-dev,
  libbsd-dev (>= 0.3.0), pkg-config,
- libsbuf-dev, libsbuf-dev (>= 8.2-2) | kfreebsd-kernel-headers (<< 0.56),
+ libsbuf-dev (>= 9.0+ds1-2),
  kernel-wedge (>= 2.79) [kfreebsd-any],
 Standards-Version: 3.9.2
 
