@@ -2,8 +2,10 @@ kfreebsd-10 (10.0~svn232747-2) UNRELEASED; urgency=low
 
   * Set -DWITHOUT_KERNEL_SYMBOLS MK knob to make lintian happy.
   * Replace 950_no_stack_protector.diff with -DWITHOUT_SSP build knob.
+  * Misc adjustments to make it possible to build with Clang (if enabled
+    in debian/rules).
 
- -- Robert Millan <rmh@debian.org>  Sat, 17 Mar 2012 01:16:08 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 17 Mar 2012 10:08:57 +0100
 
 kfreebsd-10 (10.0~svn232747-1) experimental; urgency=low
 
